<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hai_vinto"
        android:textColor="@color/colorAccentDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team13name"
        android:layout_width="124dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/team_13"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner" />

    <TextView
        android:id="@+id/team24name"
        android:layout_width="136dp"
        android:layout_height="77dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/team_24"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDark"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toEndOf="@+id/team13name"
        app:layout_constraintTop_toBottomOf="@+id/winner" />

    <TextView
        android:id="@+id/team13points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_7"
        android:textColor="@color/colorAccentDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/team13name"
        app:layout_constraintStart_toStartOf="@+id/team13name"
        app:layout_constraintTop_toBottomOf="@+id/team13name" />

    <TextView
        android:id="@+id/team24points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_4"
        android:textColor="@color/colorAccentDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/team24name"
        app:layout_constraintStart_toStartOf="@+id/team24name"
        app:layout_constraintTop_toBottomOf="@+id/team24name" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/prossimo_round"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/esci"
        android:textColor="@color/colorAccentDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/yesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>